# RoboMobileClient

./: CMakeLists.txt  Client4robo.cpp  README.md  client.bat  documentation.odt  install.sh  main.cpp  windows.bat  windows_make.bat
docs/: UserGuide.odt
includes/GUI/: guiFunctions.h  nuklear_gdip.h
sources/: CLP.cpp  client.cpp  client.hpp  config.cpp  config.hpp  queue.cppd  queue.hpp  server.cpp  server.hpp  signs.hpp  videomaker.cpp  videomaker.hpp
